# halogen

./: .drone.yml  .env  .env.example  .gdbinit  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Justfile  Makefile  README.md  justfile  readme.md  rust-toolchain.toml  x
halogen/kernel/: Cargo.toml  link.ld
halogen/kernel/src/: error.rs  log.rs  main.rs  panic.rs  syscall.rs
halogen/kernel/src/arch/: context.rs  mod.rs
halogen/kernel/src/boot/: entry.s  mod.rs
halogen/kernel/src/io/: char.rs  console.rs  mod.rs  uart.rs
halogen/kernel/src/irq/: mod.rs  plic.rs
kernel/: Cargo.toml  Makefile  rustfmt.toml  virt.lds
kernel/.cargo/: config  config.toml
kernel/derive/src/: lib.rs
kernel/halogen/: Cargo.toml  link.ld
kernel/halogen/.cargo/: config.toml
kernel/halogen/src/: log.rs  main.rs  prelude.rs
kernel/ld/: sifive_u.ld  virt.ld
kernel/lds/: virt-phys.lds  virt-virt.lds
kernel/src/: ansi.rs  bitwise.rs  boot.rs  dump.rs  log.rs  main.rs  mmio.rs  panic.rs  prelude.rs  print.rs  syscall.rs  test.rs  trap.rs  uart.rs  util.rs
kernel/src/arch/: context.rs  mod.rs  satp.rs
kernel/src/boot/: boot.s  trap.s
kernel/src/debug/: dump.rs  mod.rs
kernel/src/driver/: mod.rs  uart.rs
kernel/src/io/: uart.rs
kernel/src/irq/: mod.rs  plic.rs  trap.rs
kernel/src/mem/: bitmap.rs  frame_alloc.rs  heap.rs  kmalloc.rs  mod.rs  paging.rs  palloc.rs  phys.rs  range.rs  stack.rs  sv39.rs
kernel/src/memory/: addr_space.rs  mod.rs
kernel/src/panic/: mod.rs  panic.rs
kernel/src/proc/: context.rs  mod.rs  proc.rs
kernel/src/process/: context.rs  process.rs
kernel/src/sbi/: call.rs  hsm.rs  mod.rs  timer.rs  uart.rs
kernel/src/sched/: fifo.rs  scheduler.rs
kernel/src/test/: harness.rs  heap.rs  mod.rs  thread.rs
kernel/src/tests/: harness.rs  heap.rs
kernel/src/thread/: executor.rs  mod.rs
kernel/src/trap/: mod.rs
kernel/src/util/: mod.rs  style.rs
lab-os/: Cargo.toml  link.ld
lab-os/.cargo/: config.toml
lab-os/src/: main.rs  panic.rs  test.rs  util.rs
lab-os/src/boot/: boot.s
lab-os/src/cpu/: frame.rs  mod.rs
lab-os/src/debug/: dump.rs
lab-os/src/driver/: mod.rs  uart.rs  virt.rs
lab-os/src/mem/: mod.rs  pages.rs  phys.rs
lab-os/src/trap/: mod.rs
(+211 files in other folders)
