[package]
name = "halogen"
version = "0.1.0"
authors = ["Trevor McKay <tm@trmckay.com>"]
edition = "2018"

[dependencies]
qemu-exit = "3.0.1"
spin = "0.9.2"
log = "0.4.14"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"
opt-level = 2
